--- a/pet_blog/src/index.css
+++ b/pet_blog/src/index.css
@@ -294,7 +294,7 @@ Landing Page
 
 /* Featured posts */
 .landing-page-featured-posts-container {
-  padding: 2rem 0;
+  padding: 3rem 0;
 }
 
  .landing-page-featured-posts-wrapper {
@@ -302,7 +302,7 @@ Landing Page
   max-width: 1200px;
   margin: 0 auto;
   display: grid;
-  gap: 2rem;
+  gap: 3rem;
 }
 
 .landing-page-featured-post-header-container {
@@ -311,36 +311,34 @@ Landing Page
   justify-content: start;
   align-items: start;
   gap: 0.5rem;
+  max-width: 400px;
 }
 
 .landing-page-featured-posts-header {
   text-wrap: pretty;
   color: var(--orange-50);
-  line-height: 1.3;
-  font-size: clamp(1.5rem, 3vw + 1rem, 2rem);
+  line-height: 1.1;
+  font-size: clamp(1.7rem, 2.5vw + 1rem, 3rem);
 }
 
 .landing-featured-posts-text {
   letter-spacing: 0.05rem;
-  line-height: 1.5;
+  line-height: 1.4;
   color: var(--black-30);
-  max-width: 500px;
   font-weight: 500;
   text-align: start;
   font-size: 1.05rem;
-  width: 90%;
 }
 
 .landing-page-featured-posts {
   display: grid;
-  align-content: start;
+  align-items: start;
   gap: 2rem;
 }
 
 .landing-page-featured-post {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
+  display: grid;
+  align-content: start;
   gap: 1rem;
   padding: 1rem;
   border-radius: 10px;
@@ -488,8 +486,7 @@ div > p {
 
 /* Landing page topics */
 .landing-page-topics-wrapper {
-  padding: 2rem 0;
-  padding-bottom: 2rem;
+  padding: 3rem 0;
   background: var(--brown-80);
 }
 
@@ -499,7 +496,7 @@ div > p {
   margin: 0 auto;
   display: grid;
   align-content: start;
-  gap: 2rem;
+  gap: 3rem;
 }
 
 .landing-page-topic-header-container {
@@ -507,24 +504,24 @@ div > p {
   flex-direction: column;
   justify-content: start;
   align-items: start;
-  gap: 0.5rem
+  gap: 0.5rem;
+  max-width: 400px;
 }
 
 .landing-page-topic-header {
-  text-wrap: pretty;
+  text-wrap: balance;
   color: var(--orange-50);
-  line-height: 1.2;
-  font-size: clamp(1.5rem, 3vw + 1rem, 2rem);
+  line-height: 1.1;
+  font-size: clamp(1.7rem, 2.5vw + 1rem, 3rem);
 }
 
 .landing-page-topic-text {
+  text-wrap: balance;
   letter-spacing: 0.05rem;
   line-height: 1.4;
   color: var(--black-20);
-  max-width: 400px;
   font-weight: 500;
   font-size: 1.05rem;
-  width: 90%;
 }
 
 .landing-page-topics {
@@ -597,7 +594,7 @@ div > p {
 
 /* Landing page posts */
 .landing-page-posts-container{
-  padding: 2rem 0;
+  padding: 3rem 0;
 }
 
 .landing-page-posts-wrapper {
@@ -605,7 +602,7 @@ div > p {
   max-width: 1200px;
   margin: 0 auto;
   display: grid;
-  gap: 2rem;
+  gap: 3rem;
 }
 
 .landing-page-post-header-container {
@@ -614,23 +611,24 @@ div > p {
   align-items: start;
   justify-content: start;
   gap: 0.5rem;
+  max-width: 400px;
 }
 
 .landing-page-posts-header {
-  text-wrap: pretty;
+  text-wrap: balance;
   color: var(--orange-50);
-  line-height: 1.2;
-  font-size: clamp(1.5rem, 3vw + 1rem, 2rem);
+  line-height: 1.1;
+  font-size: clamp(1.7rem, 2.5vw + 1rem, 3rem);
 }
 
 .landing-page-posts-text {
   letter-spacing: 0.05rem;
-  line-height: 1.5;
+  line-height: 1.4;
   color: var(--black-30);
   max-width: 500px;
   font-weight: 500;
   font-size: 1.05rem;
-  width: 90%;
+  text-wrap: balance;
 }
 
 .landing-page-posts {
@@ -640,9 +638,8 @@ div > p {
 }
 
 .landing-page-post {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
+  display: grid;
+  align-items: start;
   gap: 1rem;
   padding: 1rem;
   border-radius: 10px;
@@ -783,8 +780,7 @@ div > p {
 /* Email subscription */
 .landing-page-email-sub-form-wrapper {
   background: var(--brown-80);
-  padding: 2rem 0;
-  padding-bottom: 2rem;
+  padding: 3rem 0;
 }
 
 .landing-page-email-form-contents {
@@ -792,63 +788,71 @@ div > p {
   margin: 0 auto;
   display: grid;
   align-content: start;
-  gap: 2rem;
+  gap: 3rem;
 }
 
 .landing-page-email-form-text-container {
   display: flex;
   flex-direction: column;
-  align-content: start;
+  align-items: start;
   justify-content: start;
   gap: 0.5rem;
-  max-width: 500px;
+  max-width: 400px;
 }
 
 .landing-page-email-form-header {
-  text-wrap: pretty;
+  text-wrap: balance;
   color: var(--orange-50);
-  line-height: 1.2;
-  font-size: clamp(1.5rem, 3vw + 1rem, 2rem);
+  line-height: 1.1;
+  font-size: clamp(1.7rem, 2.5vw + 1rem, 3rem);
 }
 
 .landing-page-email-form-text {
   letter-spacing: 0.05rem;
   line-height: 1.4;
-  color: var(--black-20);
-  text-wrap: pretty;
+  color: var(--black-30);
+  text-wrap: balance;
   font-size: 1.05rem;
-  width: 90%;
-  max-width: 400px;
   font-weight: 500;
-
 }
 
 .landing-page-email-sub-form {
   display: grid;
-  gap: 0.8rem;
+  gap: 1rem;
+}
+
+.landing-page-email-sub-form > label {
+  font-size: 1rem;
+  letter-spacing: 0.05rem;
+  color: var(--black-15);
+  font-weight: 500;
 }
 
 .landing-page-email-sub-form > input {
-  padding: 0.8rem 1rem;
-  border-radius: 5px;
+  padding: 0 1rem;
   border: none;
-  background: white;
+  border-bottom: 2px solid var(--black-95);
+  background: transparent;
   font-size: 1rem;
 }
 
 .landing-page-email-sub-form > input:focus {
-  outline: 2px solid var(--focus);
+  outline: none !important;
 }
 
 .landing-page-email-sub-btn {
-  padding: 0.8rem 1rem;
-  border-radius: 5px;
+  padding: 0.7rem 1.5rem;
+  border-radius: 25px;
   border: none;
   background: var(--orange-50);
   font-weight: 500;
   color: white;
   font-size: 1rem;
   cursor: pointer;
+  margin-top: 0.5rem;
+  justify-self: end;
+  letter-spacing: 0.05rem;
+  text-transform: uppercase;
 }
 /* end */
 
@@ -883,28 +887,11 @@ div > p {
   /* Landing page email subscription form */
   .landing-page-email-form-contents {
     width: 90%;
-    max-width: 600px;
-    margin: 0 auto
-  }
-
-  .landing-page-email-form-text-container {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: start;
-    text-align: center;
-    margin: 0 auto
-  }
-
-  .landing-page-email-form-text {
-    width: initial;
-    max-width: 500px;  
-    margin: 0 auto;
+    max-width: 1200px;
   }
 }
 
 @media screen and (min-width: 640px) {
-
   .mobile-landing-page-hero-wrapper {
     height: calc(80dvh);
     background: linear-gradient(
@@ -933,18 +920,12 @@ div > p {
 
   .landing-page-featured-posts {
     grid-template-columns: repeat(2, 1fr);
+    align-items: stretch;
   }
 
   .landing-page-featured-post {
-    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.200)
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.200);
   }
-
-  /* .landing-page-featured-post-image{
-    width: 100%;
-    height: 100%;
-    aspect-ratio: 3/2;
-    object-fit: cover;
-  } */
 
   .mobile-landing-page-featured-post-title {
     font-size: clamp(1.1rem, 1vw + 1rem , 1.2rem);
@@ -958,6 +939,7 @@ div > p {
 
   .landing-page-posts {
     grid-template-columns: repeat(2, 1fr);
+    align-items: stretch;
   }
 
   .landing-page-post {
@@ -988,6 +970,17 @@ div > p {
 
   .landing-page-topic-name {
     font-size: clamp(1rem, 1vw + 1rem, 1.2rem);;
+  }
+  /* end */
+
+  /* Landing page email subscription */
+  .landing-page-email-form-contents {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 4rem;
+  }
+
+  .landing-page-email-form-text-container {
+    gap: 1rem;
   }
   /* end */
 }
@@ -1086,37 +1079,11 @@ div > p {
     padding: 3rem 0;
     padding-bottom: 5rem;
   }
-
-  .landing-page-featured-posts-wrapper {
-    gap: 2rem;
-  }
-  
-  .landing-page-featured-post-header-container {
-    align-items: start;
-  }
-  
-  .landing-page-featured-posts-header, 
-  .landing-featured-posts-text{
-    text-align: start;
-  }
-  
+ 
   .landing-page-posts-container{
     padding: 5rem 0;
   }
 
-  .landing-page-posts-wrapper {
-    gap: 2rem;
-  }
-
-  .landing-page-post-header-container {
-    align-items: start;
-  }
-  
-  .landing-page-posts-header,
-  .landing-page-posts-text {
-    text-align: start;
-  }
-  
   .landing-page-topics-wrapper {
     padding: 5rem 0;
   }
@@ -1124,32 +1091,12 @@ div > p {
   .landing-page-email-sub-form-wrapper {
     padding: 5rem 0;
   }
-
-  .landing-page-topics-container {
-    gap: 2rem;
-  }
 }
 
 @media screen and (min-width: 1100px) {
 
   .landing-page-hero-text-wrapper {
     width: 45%;
-  }
-
-  .landing-page-featured-posts-header {
-    font-size: clamp(1.5rem, 5vw + 1rem, 2rem);
-  }
-
-  .landing-page-topic-header {
-    font-size: clamp(1.5rem, 5vw + 1rem, 2rem);
-  }
-
-  .landing-page-posts-header {
-    font-size: clamp(1.5rem, 5vw + 1rem, 2rem);
-  }
-
-  .landing-page-email-form-header {
-    font-size: clamp(1.5rem, 5vw + 1rem, 2rem);
   }
 
   .landing-page-topic-name {
@@ -4123,7 +4070,6 @@ FOOTER
 ====== */
 .footer-container {
   background: var(--brown-20);
-  padding-top: 4rem;
 }
 
 .footer-container__contents {
@@ -4132,6 +4078,7 @@ FOOTER
   margin: 0 auto;
   display: grid;
   gap: 2rem;
+  padding: 3rem 0;
   align-content: start;
 }
 
@@ -4167,9 +4114,10 @@ FOOTER
 
 .footer-container__brand-text > p {
   color: var(--brown-80);
-  letter-spacing: 0.07rem;
-  line-height: 1.5;
-  max-width: 500px;
+  letter-spacing: 0.05rem;
+  line-height: 1.4;
+  max-width: 400px;
+  text-wrap: balance;
 }
 
 .footer-container__quick-links {
@@ -4406,5 +4354,11 @@ FOOTER
   .footer-container__contents > *:nth-child(1),
   .footer-container__contents > *:nth-child(4){
     flex: 1;
+  }
+}
+
+@media (min-width: 750px) {
+  .footer-container__contents {
+    padding: 5rem 0 ;
   }
 }
